# document-intelligence-refinery

./: .env.example  .gitignore  Dockerfile  PIPELINE_TESTING_GUIDE.md  README.md  SYSTEM_IMPLEMENTATION_REPORT.md  TRP1 Challenge Week 3_ The Document Intelligence Refinery.md  class_coverage_report.txt  final_report.tex  pyproject.toml  test_results.txt
.refinery/: extraction_ledger.jsonl  refinery.db
.refinery/chroma_store/: chroma.sqlite3
.refinery/chroma_store/31485dfc-518b-4bd9-939f-8e675707f3ff/: index_metadata.pickle
.refinery/pageindex/: 532544e8e3c8.json
.refinery/profiles/: 126c758533ee.json  13cf385f5549.json  1b004f82ed6d.json  1d9ae1f91f66.json  276fc7bc8deb.json  3680f816abab.json  3dca9dcfdb30.json  40edbded54df.json  4289f2eedcd0.json  532544e8e3c8.json  564cd3b18be5.json  69bdb848bb1a.json  75f1dcf2ff73.json  88145efb1c21.json  88c87db3ab45.json  8b2e610472e2.json  8d3579780992.json  8fdc2226072a.json  919727312306.json  977015043cfd.json  a180ccda171a.json  acac5a3feda8.json  ae4376ee741f.json  b4f1731a9271.json  c0985e035334.json  c7d87eb9189d.json  d5282a26ee7f.json  d537d9f6de02.json  db5693e3c1f6.json  fbc19a5be67d.json  ff10f7bdfea1.json
.refinery/runs/2cbdf4ceda89/: facts.json  knowledge_graph.json  ldus.json  ledger.json  pageindex.json  profile.json
.refinery/runs/77a57a476543/: facts.json  knowledge_graph.json  ldus.json  ledger.json  profile.json
.refinery/runs/929f1c59acbe/: facts.json  knowledge_graph.json  ldus.json  ledger.json  pageindex.json
.refinery/runs/f789332cb2da/: facts.json  ldus.json  ledger.json  pageindex.json  profile.json
rubric/: extraction_rules.yaml
scripts/: _check_ledger.py  ensure_class_coverage.py  generate_class_report.py  generate_interim_report.py  generate_ledger.py  generate_profiles.py
src/: cli.py  config.py
src/agents/: chunker.py  entity_linker.py  extractor.py  fact_table.py  indexer.py  pageindex.py  query_agent.py  triage.py
src/db/: __init__.py  init_db.py  repo.py  schema.sql  vector_store.py
src/models/: __init__.py  schemas.py
src/pipeline/: __init__.py  orchestrator.py
src/strategies/: __init__.py  base.py  fast_text.py  layout.py  ocr.py  vision.py
src/utils/: __init__.py  hash_utils.py
src/vision/: __init__.py  ocr_backends.py
tests/: test_chunking_engine.py  test_db_and_schemas.py  test_docling.py  test_entity_linker.py  test_extraction_router.py  test_fact_table.py  test_models.py  test_pageindex_builder.py  test_pipeline_and_cli.py  test_query_agent.py  test_triage_layout.py  test_triage_origin.py
